--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,9 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+
+
 
 }
