--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         android:theme="@style/Theme.KrishiMitr"
         tools:targetApi="31">
         <activity
+            android:name=".ai.SolutionsActivity"
+            android:exported="false" />
+        <activity
             android:name=".chat.ExpertListActivity"
             android:exported="false" />
         <activity
